<resources>
    <string name="app_name">彩票89</string>
    <string name="setting">设置</string>

    <string name="cancel">取消</string>
    <string name="prompt_we_need_camera">我们需要您提供相关权限以使我们能够更好的为您服务.</string>
    <string name="prompt_request_camara">我们即将请求相机相关的权限.是否前往请求?</string>
    <string name="prompt_already_get_permission">已获得相机权限,开始做自己的事吧!</string>
    <string name="prompt_been_denied">已被拒绝获取权限</string>


    <string name="s_network_error_or_page_not_find">网页找不到或者网络异常</string>
    <string name="s_refresh_page">刷新页面</string>
    <string name="requesting">请求中</string>

    <string name="action_back">返回</string>

    <!-- loading -->
    <string name="loading">正在加载中...</string>
    <string name="reloading">点击重新加载</string>

    <string name="s_load_more_end">已经到底啦~</string>
    <string name="s_not_message">列表是空的！</string>
    <string name="s_not_message1">该支付方式未设置，给您带来的不便敬请谅解！\n 您可以选择其他的支付方式，谢谢！</string>
    <string name="s_bank_tixing">提醒您：\n \n   1.请如实填写存入时间、存入金额、存款人姓名。 \n   2.每笔转账请提交一次。 \n   3.转账金额添加零头如5003.10，便于财务查收，加快到账速度。\n   4.转账完成后请保留单据作为核对凭证</string>

    <string name="main_tab_homepage">首页</string>
    <string name="main_tab_goucai">购彩</string>
    <string name="main_tab_kaijiang">开奖</string>
    <string name="main_tab_zoushi">走势</string>
    <string name="main_tab_user">我的</string>
    <string name="pressargin">再按一次退出</string>
    <string name="about">关于我们</string>

    <!--dialog常用词汇-->
    <string name="dialog_networkerror">服务器数据加载失败！</string>
    <string name="dialog_ok">确定</string>
    <string name="dialog_cancel">取消</string>
    <string name="dialog_prompt">提示</string>
    <string name="dialog_tips">提示</string>

    <!-- 版本控制 -->
    <string name="update">版本更新！</string>
    <string name="newUpdateAvailable">发现新版本,是否立即更新？</string>
    <string name="dialogPositiveButton">立即更新</string>
    <string name="dialogNegativeButton">以后再说</string>
    <string name="dialogNegativeButton1">退出应用</string>
    <string name="app_no_new_update">没有发现新版本</string>
    <string name="download_progress">正在下载:%1$d%%</string>
    <string name="downloading">后台正在下载最新版本！</string>
    <string name="download_success">下载完成，点击安装</string>
    <string name="download_error">下载过程中出现网络异常！</string>

    <!-- HomePage -->
    <string name="home_page">主页</string>
    <string name="s_hot_type">热门彩种</string>
    <string name="s_new_win">最新中奖榜</string>
    <string name="s_more_type">更多彩种</string>
    <string name="s_promotions">优惠活动</string>
    <string name="s_win_text">喜中%1$s元</string>
    <string name="s_win_type">购买%1$s</string>
    <string name="s_homepage_1">存/取款</string>
    <string name="s_homepage_2">投注记录</string>
    <string name="s_homepage_3">优惠活动</string>
    <string name="s_homepage_4">在线客服</string>

    <!-- 购彩大厅 -->
    <string name="s_goucai_dating">购彩大厅</string>
    <string name="s_goucai_all">全部彩种</string>
    <string name="s_goucai_gp">高频彩</string>
    <string name="s_goucai_dp">低频彩</string>
    <string name="s_qishu">第%1$s期</string>
    <string name="s_qishu_jiezhi">距第%1$s期截止还有</string>


    <!-- 登录页面 -->
    <string name="s_register_now">立即注册</string>
    <string name="s_email_login">邮箱登录</string>
    <string name="s_find_password">找回密码</string>
    <string name="s_please_enter_account">请输入账号</string>
    <string name="s_please_enter_email">请输入邮箱</string>
    <string name="s_please_enter_pwd">请输入密码</string>
    <string name="s_please_enter_vcode">请输入验证码</string>
    <string name="s_user_login">用户登录</string>
    <string name="s_user_login_shiwan">试玩账号登录</string>
    <string name="search_hint">\t搜索商品</string>
    <string name="search_order_hint">\t订单搜索</string>
    <string name="s_login">登录</string>
    <string name="s_login_mianfeishiwan">免费试玩</string>
    <string name="s_register">立即注册</string>
    <string name="s_logout">退出登录</string>
    <string name="s_setting">设置</string>
    <string name="s_bind">绑定</string>
    <string name="s_bind_mobile">绑定手机</string>
    <string name="s_login_status_failed">您还未登录或登录状态超时，是否跳转到登录界面？</string>
    <string name="s_agree_protocol">我已年满十八周岁，并且同意接受《法律声明》 \n 请牢记凤凰彩票F83官方永久域名：F83.com</string>

    <!-- 设置页面 -->
    <string name="s_setting_changepassword">修改登录密码</string>
    <string name="s_setting_changetikuanpassword">修改提现密码</string>
    <string name="s_setting_changebank">修改银行卡</string>
    <string name="s_setting_setmibao">设置密保问题</string>
    <string name="s_setting_changemibao">密码找回</string>
    <string name="s_setting_submit">立即修改</string>

    <!-- 充值页面 -->
    <string name="s_topup">充值</string>
    <string name="s_weixin_tianjiahaoyou">微信添加好友</string>
    <string name="s_weixin_pingtaichongzhi">微信平台充值</string>
    <string name="s_weixin_bank">微信银行卡转账</string>
    <string name="s_ali_tianjiahaoyou">支付宝添加好友</string>
    <string name="s_ali_pingtaichongzhi">支付宝充值</string>
    <string name="s_ali_bank">支付宝银行卡转账</string>
    <string name="s_qq_pingtaichongzhi">QQ钱包充值</string>
    <string name="s_bank_yinhangzhuanzhang">银行转账</string>
    <string-array name="s_array_topup">
        <item>银行转账</item>
        <item>微信</item>
        <item>支付宝</item>
        <item>QQ钱包</item>
        <item>网银支付</item>
    </string-array>

    <string-array name="s_array_banknames">
        <item>中国银行</item>
        <item>中国建设银行</item>
        <item>中国工商银行</item>
        <item>招商银行</item>
        <item>中国农业银行</item>
        <item>中国邮政储蓄</item>
        <item>中国民生银行</item>
        <item>中信银行</item>
        <item>中国光大银行</item>
        <item>兴业银行</item>
        <item>华夏银行</item>
        <item>北京银行</item>
        <item>浦发银行</item>
        <item>广发银行</item>
        <item>平安银行</item>
        <item>其他</item>
    </string-array>

    <string-array name="s_array_mingxi_type">
        <item>全部</item>
        <item>充值</item>
        <item>提款</item>
        <item>派奖</item>
        <item>撤单</item>
        <item>购彩</item>
        <item>返点</item>
        <item>签到</item>
        <item>推荐</item>
        <item>红包</item>
        <item>其他</item>
    </string-array>

    <string-array name="s_array_mingxi_type_num">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string-array name="s_array_chongzhi_type">
        <item>全部</item>
        <item>待审核</item>
        <item>已存入</item>
        <item>已取消</item>
    </string-array>

    <string-array name="s_array_chongzhi_type_num">
        <item></item>
        <item>0</item>
        <item>1</item>
        <item>-1</item>
    </string-array>

    <string-array name="s_array_tikuan_type">
        <item>全部</item>
        <item>待审核</item>
        <item>已提款</item>
        <item>已取消</item>
    </string-array>

    <string-array name="s_array_tikuan_type_num">
        <item></item>
        <item>0</item>
        <item>1</item>
        <item>-1</item>
    </string-array>

    <string name="s_zhanghumingxi">账户明细</string>
    <string name="s_chongzhijilu">充值记录</string>
    <string name="s_tikuanjilu">提款记录</string>

    <!-- 提款 -->
    <string name="s_tikuan">提款</string>
    <string name="s_tikuan_name">收款姓名</string>
    <string name="s_tikuan_yue">账户余额</string>
    <string name="s_tikuan_bili">消费比例</string>
    <string name="s_tikuan_shifou">是否可以提款：</string>
    <string name="s_tikuan_mianfei">当天免手续费：</string>
    <string name="s_tikuan_yinhang">收款银行：</string>
    <string name="s_tikuan_zhanghao">收款账号：</string>
    <string name="s_tikuan_jine">提款金额：</string>
    <string name="s_tikuan_mima">提款密码：</string>
    <string name="s_tikuan_submit">确认</string>

    <!-- 签到 -->
    <string name="s_qiandao">签到</string>
    <string name="s_qiandao_jilu">签到记录</string>
    <string name="s_qiandao_yue">账户余额</string>
    <string name="s_qiandao_zuijin">最近三天充值记录</string>
    <string name="s_qiandao_zengsong">赠送百分比（%）</string>
    <string name="s_qiandao_hongbao">可领取红包金额</string>
    <string name="s_qiandao_ok">签到领取</string>

    <!-- 推荐 -->
    <string name="s_tuijian">我的推荐</string>
    <string name="s_tuijian_jilu">推荐记录</string>

    <!-- 投注内页 -->
    <string name="s_clear_options">清空选项</string>
    <string name="s_trend">历史开奖</string>
    <string name="s_buy">投注</string>
    <string name="s_lottery_time">开奖时间：%1$s</string>
    <string-array name="s_array_buy">
        <item>自选下注</item>
        <item>快捷下注</item>
    </string-array>
    <string name="s_play_options">玩法选择：%1$s</string>
    <string name="s_buy_explain">%1$d注共&lt;font color=\'#FF0000\'&gt;%2$s&lt;/font&gt;元，若中奖，奖金&lt;font color=\'#FF0000\'&gt;%3$s&lt;/font&gt;元，盈利&lt;font color=\'#FF0000\'&gt;%4$s&lt;/font&gt;元</string>
    <string name="s_amount">&lt;font color=\'#FF0000\'&gt;余额:&lt;/font&gt;￥%1$s</string>

    <!-- 投注中奖 -->
    <string name="s_money">%1$s元</string>
    <string name="s_win_money">赢%1$s元</string>
    <string name="s_not_win">未中奖</string>
    <string name="s_weikaijiang">未开奖</string>
    <string name="s_yiquxiao">已取消</string>
    <string name="s_yijiesuan">已结算</string>
    <string name="s_play_name">玩法名称：%1$s</string>
    <string name="s_buy_number">投注号码：%1$s</string>
    <string-array name="s_array_buy_record">
        <item>全部订单</item>
        <item>我的中奖</item>
        <item>待开奖</item>
        <item>我的撤单</item>
    </string-array>

    <string-array name="options">
        <item>相机</item>
        <item>相册 </item>
    </string-array>

    <string name="s_buy_one">去投一注</string>
</resources>
