<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layout_background"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:text="@string/s_tikuan_name"
            android:textColor="@color/black"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/tikuan_name_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:gravity="right"
            android:text="测试1"
            android:textColor="@color/black"
            android:textSize="15sp"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal">


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:text="@string/s_tikuan_yue"
            android:textColor="@color/black"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/tikuan_yue_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:gravity="right"
            android:text="¥150.69元"
            android:textColor="@color/black"
            android:textSize="15sp"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="15dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:paddingLeft="5dp"
        android:text="@string/s_tikuan_bili"
        android:textColor="@color/black"
        android:textSize="15sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:text="@string/s_tikuan_shifou"
            android:textColor="@color/black"
            android:textSize="13sp"/>

        <TextView
            android:id="@+id/tikuan_shifou_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:gravity="right"
            android:text="否"
            android:textColor="@color/black"
            android:textSize="13sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:text="@string/s_tikuan_mianfei"
            android:textColor="@color/black"
            android:textSize="13sp"/>

        <TextView
            android:id="@+id/tikuan_mianfei_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:gravity="right"
            android:text="无数次"
            android:textColor="@color/black"
            android:textSize="13sp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tikuan_lastRecharge_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:padding="5dp"
        android:textColor="@color/black"
        android:textSize="13sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:text="@string/s_tikuan_yinhang"
            android:textColor="@color/black"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/tikuan_yinhang_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:text="中国农业银行"
            android:textColor="@color/black"
            android:textSize="15sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:text="@string/s_tikuan_zhanghao"
            android:textColor="@color/black"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/tikuan_zhanghao_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:text="622***575"
            android:textColor="@color/black"
            android:textSize="15sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:text="@string/s_tikuan_jine"
            android:textColor="@color/black"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/tikuan_jine_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/liuhecai_btn_weixuan_01"
            android:digits="0123456789"
            android:gravity="center_vertical"
            android:hint="最小提款金额为100.00元"
            android:inputType="number"
            android:maxLength="10"
            android:maxLines="1"
            android:padding="3dp"
            android:textSize="13sp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:text="@string/s_tikuan_mima"
            android:textColor="@color/black"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/tikuan_mima_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/liuhecai_btn_weixuan_01"
            android:gravity="center_vertical"
            android:hint="密码为4位纯数字"
            android:inputType="numberPassword"
            android:maxLength="4"
            android:maxLines="1"
            android:padding="3dp"
            android:textSize="13sp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tikuan_tip_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:padding="5dp"
        android:text="提示：因本站会员人数众多，提款将按顺序处理，请耐心等待"
        android:textColor="@color/red"
        android:textSize="12sp"/>

    <Button
        android:id="@+id/tikuan_submit_btn"
        style="@style/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="30dp"
        android:text="@string/s_tikuan_submit"/>
</LinearLayout>
