<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/md_divider_white"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:orientation="vertical"
    >

    <android.support.v7.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:gravity="center"
        android:background="?attr/colorPrimary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/s_goucai_dating"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textSize="20sp"
            />

    </android.support.v7.widget.Toolbar>

    <RadioGroup
        android:id="@+id/goucai_radioGroup"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_below="@+id/toolbar"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/goucai_all"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/radio_bg"
            android:button="@null"
            android:gravity="center"
            android:paddingLeft="0dp"
            android:checked="true"
            android:drawablePadding="3dp"
            android:drawableTop="@mipmap/goucai_all"
            android:text="@string/s_goucai_all"
            android:textColor="@color/white"
            android:textSize="13sp"/>

        <RadioButton
            android:id="@+id/goucai_gp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/radio_bg"
            android:button="@null"
            android:gravity="center"
            android:paddingLeft="0dp"
            android:drawableTop="@mipmap/goucai_gp"
            android:text="@string/s_goucai_gp"
            android:textColor="@color/white"
            android:textSize="13sp"/>

        <RadioButton
            android:id="@+id/goucai_dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/radio_bg"
            android:button="@null"
            android:gravity="center"
            android:paddingLeft="0dp"
            android:drawableTop="@mipmap/goucai_dp"
            android:text="@string/s_goucai_dp"
            android:textColor="@color/white"
            android:textSize="13sp"/>

    </RadioGroup>

    <android.support.v4.view.ViewPager
        android:id="@+id/goucai_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/goucai_radioGroup">
    </android.support.v4.view.ViewPager>

    <com.example.admin.caipiao33.views.LoadingLayout
        android:id="@+id/loadingLayout"
        android:layout_below="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

    </com.example.admin.caipiao33.views.LoadingLayout>

</RelativeLayout>