<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layout_background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:baselineAligned="false"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:src="@mipmap/login_telphone"/>

            <EditText
                android:id="@+id/edTxt_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/s_please_enter_account"
                android:imeOptions="actionNext"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:singleLine="true"
                android:textColorHint="@color/light_gray"/>
        </LinearLayout>

        <include layout="@layout/item_divider_line"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center"
            android:paddingLeft="15dp"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:src="@mipmap/login_password"/>

            <EditText
                android:id="@+id/edTxt_pwd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/s_please_enter_pwd"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:singleLine="true"
                android:textColorHint="@color/light_gray"/>

            <CheckBox
                android:id="@+id/cBox_password"
                style="@style/PassWordCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:padding="10dp"/>
        </LinearLayout>

        <include layout="@layout/item_divider_line"/>

    </LinearLayout>


    <Button
        android:id="@+id/btn_login"
        style="@style/button"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/s_login"/>

    <Button
        android:id="@+id/btn_mianfeishiwan"
        style="@style/buttonfan"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/s_login_mianfeishiwan"/>

    <Button
        android:id="@+id/btn_kefu"
        style="@style/buttonfan"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/s_homepage_4"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/s_register_now"
            android:textColor="@drawable/selector_text_red"
            android:textSize="@dimen/font_normal"
            />

        <TextView
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:background="@color/dark_gray"/>

        <TextView
            android:id="@+id/tv_find_pwd"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/s_find_password"
            android:textColor="@drawable/selector_text_red"
            android:textSize="@dimen/font_normal"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:gravity="center"
        android:visibility="gone">

        <TextView
            android:layout_width="80dp"
            android:layout_height="1px"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:background="@color/shen_grey"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="第三方登录"
            android:textColor="@color/shen_grey"/>

        <TextView
            android:layout_width="80dp"
            android:layout_height="1px"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:background="@color/shen_grey"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:visibility="gone">

        <ImageView
            android:id="@+id/login_weixin_img"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/login_state_weixin_img"/>

        <ImageView
            android:id="@+id/login_weibo_img"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/login_state_weibo_img"
            android:visibility="gone"
            />

        <ImageView
            android:id="@+id/login_qq_img"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/login_state_qq_img"
            android:visibility="gone"
            />
    </LinearLayout>
</LinearLayout>
