<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.admin.caipiao33.MainActivity">

    <RelativeLayout
        android:id="@+id/anndetials_headlayout"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/layout_title_bg"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:visibility="gone">

        <TextView
            android:id="@+id/agreement_back_tv"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:drawableLeft="@mipmap/icon_back"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:singleLine="true"
            android:text="@string/action_back"
            android:textColor="@color/white"
            android:textSize="17sp"/>

        <TextView
            android:id="@+id/agreement_web_title"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textSize="18sp"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/protocol_error_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:src="@drawable/network_non"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView5"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/s_network_error_or_page_not_find"/>

        <TextView
            android:id="@+id/protocol_refresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView3"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:text="@string/s_refresh_page"
            android:textColor="@color/colorAccent"/>
    </RelativeLayout>

    <ProgressBar
        android:id="@+id/protocol_progressbar"
        style="@style/Widget.MaterialProgressBar.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:max="100"
        android:progressDrawable="@drawable/progressbar_bg"
        android:visibility="gone"/>

    <WebView
        android:id="@+id/protocol_webView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layerType="hardware"/>

</LinearLayout>